compiler/weave_syntax/tests/data/syntax/IncompleteNamespace2.error
error: expected '{'
        --> <source>:2:1
         |
       2 | 
         | ^
error: expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
